# antsibull-changelog

./: .flake8  .git-blame-ignore-revs  .gitignore  .mypy  .mypy.ini  .pre-commit-hooks.yaml  .pylintrc.automated  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  README.md  REUSE.toml  codecov.yml  docs-requirements.txt  lint-flake8.sh  lint-mypy.sh  lint-pylint.sh  lint-pyre.sh  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  test-pytest.sh
.github/workflows/: changelog-lint.yml  nox.yml  pythonlinters.yml  pythontests.yml
antsibull_changelog/: __main__.py  ansible.py  changelog_generator.py  changes.py  changes_resolvers.py  cli.py  config.py  fragment.py  lint.py  logger.py  plugins.py  sanitize.py  utils.py  yaml.py
changelogs/: changelog.yaml  changelog.yaml.license  config.yaml
changelogs/fragments/: 0.12.0.yml  0.13.0.yml  0.14.0.yml  0.17.0.yml  0.18.0.yml  0.20.0.yml  0.21.0.yml  0.22.0.yml  0.23.0.yml  0.24.0.yml  0.31.1.yml  0.33.0.yml  0.34.0.yml  100-more-other-projects.yml  101-tomllib.yml  103-312.yaml  103-exceptions.yml  105-version-codename.yml  109-build-system.yml  123-deprecate-classic.yml  125-pre-commit-hook.yaml  126-toml-extra.yaml  130-generate-version.yml  131-generate.yml  139-output-formats.yml  141-hatch-version.yaml  147-version-option.yaml  151-generate-output-format.yml  153-pymd-improvements.yaml  160-changelog-nice-yaml.yml  162-add-plugin-period.yaml  165-changelog-sort-option.yml  166-use-constants.yml  167-python.yml  168_classic.yml  169-reformat.yml  171-pyre.yml  173-argcomplete.yml  174-antsibull-docutils.yml  175-vcs.yml  (+31 more)
docs/: changelog-configuration.md  changelog-configuration.rst  changelog.md  changelog.yaml-format.md  changelogs.md  changelogs.rst  community.md  index.md  other-projects.md  other-projects.rst
src/antsibull_changelog/: __init__.py  __main__.py  ansible.py  changelog_generator.py  changes.py  changes_resolvers.py  cli.py  config.py  constants.py  copier.py  errors.py  fragment.py  lint.py  logger.py  plugins.py  rst.py  rstcheck.py  sanitize.py  toml.py  update_galaxy.py  utils.py  yaml.py
src/antsibull_changelog/rendering/: __init__.py  _document.py  changelog.py  document.py  markdown.py  md_document.py  rst.py  rst_document.py  utils.py
stubs/: argcomplete.pyi  rstcheck.pyi  tomli.pyi  tomllib.pyi
stubs/ansible/: __init__.pyi  constants.pyi  release.pyi
stubs/rstcheck_core/: checker.pyi  config.pyi  types.pyi
tests/functional/: fixtures.py  test_changelog_archive.py  test_changelog_basic.py  test_changelog_basic_ansible.py  test_changelog_basic_ansible_classic.py  test_changelog_basic_collection.py  test_changelog_basic_lint.py  test_changelog_basic_other.py  test_changelog_reformat.py  test_changelog_yaml_linter.py  test_changelog_yaml_sanitizer.py  test_rendering.py
tests/functional/bad/: ansible-base-1.json  ansible-base-1.yaml  ansible-base-1.yaml-sanitized  felixfontein.hosttech_dns-1.json  felixfontein.hosttech_dns-1.yaml-sanitized  random-1.json  random-1.yaml  random-1.yaml-sanitized  random-2.json  random-2.json.license  random-2.yaml  random-3.json  random-3.yaml  random-3.yaml-sanitized  random-4.json  random-4.yaml  random-4.yaml-sanitized
tests/functional/good/: community.crypto-1.yaml  felixfontein.versioning_test_collection-1.yaml  felixfontein.versioning_test_collection-2.yaml  felixfontein.versioning_test_collection-3.yaml
tests/units/: test_ansible.py  test_changes.py  test_config.py  test_copier.py  test_fragment.py  test_utils.py
tests/units/fixtures/: galaxy.yml
