# Copyright (c) Ansible Project
# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "antsibull-changelog"
version = "0.19.0.post0"
description = "Changelog tool for Ansible-base and Ansible collections"
authors = ["Felix Fontein <felix@fontein.de>", "Toshio Kuratomi <a.badger@gmail.com>", "Matt Clay <matt@mystile.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ansible-community/antsibull-changelog"
documentation = "https://github.com/ansible-community/antsibull-changelog/tree/main/docs/"
packages = [
    { include = "antsibull_changelog", from = "src" },
    { include = "tests", format = "sdist" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers"
]

[tool.poetry.urls]
"Code of Conduct" = "https://docs.ansible.com/ansible/latest/community/code_of_conduct.html"
"Bug tracker" = "https://github.com/ansible-community/antsibull-changelog/issues"
"Changelog" = "https://github.com/ansible-community/antsibull-changelog/tree/main/CHANGELOG.rst"

[tool.poetry.scripts]
antsibull-changelog = "antsibull_changelog.cli:main"

[tool.poetry.dependencies]
python = "^3.9.0"
packaging = "*"
semantic_version = "*"
docutils = "*"
rstcheck = ">= 3.0.0, < 7.0.0"
PyYAML = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-error-for-skips = "*"
flake8 = "*"
codecov = "*"
pyre-check = "^0.9.17"
pylint = "*"
mypy = "*"
mock = "*"
types-docutils = "*"
types-PyYAML = "*"
types-toml = "*"

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
