# Copyright (c) Ansible Project
# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antsibull-changelog"
version = "0.23.0.post0"
description = "Changelog tool for Ansible-base and Ansible collections"
readme = "README.md"
requires-python = ">= 3.9.0"
license = "GPL-3.0-or-later"
license-files.globs = ["LICENSES/*.txt"]
authors = [
  { name = "Felix Fontein", email = "felix@fontein.de" },
  { name = "Toshio Kuratomi", email = "a.badger@gmail.com" },
  { name = "Matt Clay", email = "matt@mystile.com" },
]
maintainers = [
  { name = "Felix Fontein", email = "felix@fontein.de" },
  { name = "Maxwell G", email = "maxwell@gtmx.me" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Ansible",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "docutils",
    "packaging",
    "PyYAML",
    "rstcheck >= 3.0.0, < 7.0.0",
    "semantic_version",
]

[project.urls]
"Source code" = "https://github.com/ansible-community/antsibull-changelog/"
"Documentation" = "https://github.com/ansible-community/antsibull-changelog/tree/main/docs/"
"Code of Conduct" = "https://docs.ansible.com/ansible/latest/community/code_of_conduct.html"
"Bug tracker" = "https://github.com/ansible-community/antsibull-changelog/issues"
"Changelog" = "https://github.com/ansible-community/antsibull-changelog/tree/main/CHANGELOG.rst"

[project.scripts]
antsibull-changelog = "antsibull_changelog.cli:main"


[project.optional-dependencies]
#
# User facing
#

# Use for getting the current version from pyproject.toml
toml = [
    "tomli; python_version<'3.11'",
]

#
# Development. Not user facing.
#

codeqa = [
    "flake8 >= 3.8.0",
    "pylint",
    "reuse",
]
coverage = [
    "coverage[toml]",
]
formatters = [
    "black",
    "isort",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-error-for-skips",
]
typing = [
    "mypy",
    # https://github.com/facebook/pyre-check/issues/398
    "pyre-check >= 0.9.17",
    "types-docutils",
    "types-PyYAML",
    "types-toml",
]
dev = [
    # Used by nox sessions
    "antsibull-changelog[codeqa]",
    "antsibull-changelog[coverage]",
    "antsibull-changelog[formatters]",
    "antsibull-changelog[test]",
    "antsibull-changelog[typing]",
    # misc
    "nox",
]

[tool.isort]
profile = "black"

[tool.coverage.paths]
source = [
    "src",
   "*/site-packages",
]

[tool.mypy]
mypy_path = "stubs/"

[[tool.mypy.overrides]]
module = "semantic_version"
ignore_missing_imports = true
